--- a/views/detail.ejs
+++ b/views/detail.ejs
@@ -4,7 +4,12 @@
     <!-- <h3>상세페이지</h3> -->
     <div>
         <h4><%= posts.title %></h4>
-        <p class="writeInfo">홍길동 / <%= posts.date %> / 좋아요: 0</p>
+        <p class="writeInfo">
+            <a href="/personal/<%= posts.userId %>"><%= posts.userName %></a> / <%= posts.date %> / 좋아요: <%= like.totalLike %>
+            <% if(like.likeMember && Array.isArray(like.likeMember)){ %>
+                <%- like.likeMember.map(m => `<a href="/personal/${m}">${m}</a>`) %>
+            <% } %>
+        </p>
         <div class="imgArea">
             <% if(posts.postImgPath == null){ %>
                 <img src="/img-not-found.jpg" alt="이미지 없음">
@@ -15,41 +20,65 @@
         <div class="txtArea"><%= posts.content %></div>
     </div>
     <div class="btnArea"> 
-        <button class="btnEdit">수정</button>
-        <button class="btnDel">삭제</button>
+        <% if(user && user.userId === posts.userId){ %>
+            <button class="btnEdit">수정</button>
+            <button class="btnDel">삭제</button>
+        <% } %>
         <button class="btnList">목록</button>
         <button class="btnLike">좋아요</button>
     </div>
 </main>
 
 <script>
+    const btnEdit = document.querySelector('.btnEdit');
+    if(btnEdit){
+        btnEdit.addEventListener('click', ()=>{
+            location.href=`/edit/<%= posts._id %>`
+        })
+    }
+
+    const btnDel = document.querySelector('.btnDel');
+    if(btnDel){
+        btnDel.addEventListener('click', ()=>{
+            const postId = `<%= posts._id %>`
+            fetch(`/delete/${postId}`, {
+                method: 'POST', 
+                headers: {
+                    'Content-type': 'application/json',
+                },
+                body: JSON.stringify({_method: 'DELETE'})
+            }).then(res => {
+                console.log(res);
+                if(res.ok){
+                    // 삭제 성공 시
+                    alert('삭제 완료')
+                    location.href='/'
+                }
+            })
+        });
+    }
+
     const btnList = document.querySelector('.btnList');
     btnList.addEventListener('click', ()=>{
         location.href='/'
     });
 
-    const btnEdit = document.querySelector('.btnEdit');
-    btnEdit.addEventListener('click', ()=>{
-        location.href=`/edit/<%= posts._id %>`
-    });
-
-    const btnDel = document.querySelector('.btnDel');
-    btnDel.addEventListener('click', ()=>{
-        const postId = `<%= posts._id %>`
-        fetch(`/delete/${postId}`, {
-            method: 'POST', 
-            headers: {
-                'Content-type': 'application/json',
-            },
-            body: JSON.stringify({_method: 'DELETE'})
-        }).then(res => {
-            console.log(res);
-            if(res.ok){
-                // 삭제 성공 시
-                alert('삭제 완료')
-                location.href='/'
-            }
-        })
-    });
+    const btnLike = document.querySelector('.btnLike');
+    const user = `<%= user ? user.userId : '' %>`;
+    btnLike.addEventListener('click', async ()=>{
+        if(!user){
+            alert('로그인 시 사용 가능한 기능입니다.');
+            window.location.href='/login';
+        }else{
+            fetch('/like/<%= posts._id %>', {
+                method: 'POST',
+            }).then( res => {
+                if(res.ok){
+                    alert('좋아요 버튼이 클릭되었습니다.');
+                    location.reload();
+                }
+            })
+        }
+    })
 </script>
 <%- include('footer.ejs') %>
