--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,13 +13,13 @@
                         <% if(post.postImgPath == null){ %>
                             <img src="/img-not-found.jpg" alt="이미지 없음">
                         <% } else { %>
-                            <img src="<%= post.postImgPath %>" alt="<%= post.postImgPath %>">
+                            <img src="<%= post.postImgPath %>" alt="<%= post.title %>">
                         <% } %>
                     </div>
                     <div class="info">
                         <h4 class="title"><%= post.title %></h4>
                         <p class="desc"><%= post.content %></p>
-                        <div><span class="writer">작성자</span><span class="date"><%= post.date %></span></div>
+                        <div><span class="writer"><%= post.userName %></span><span class="date"><%= post.date %></span></div>
                     </div>
                     <a class="more" href="/detail/<%= post._id %>">자세히 보기</a>
                 </li>
