--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -16,7 +16,7 @@
 
         <button class="btnSignup">회원가입</button>
     </form>
-    <p class="alertModal">안내 메시지 출력</p>
+    <p class="alertModal"></p>
     <p>이미 회원이신가요? <a href="/login">로그인</a></p>
 </main>
 
