--- a/views/header.ejs
+++ b/views/header.ejs
@@ -21,11 +21,14 @@
       <header class="hd mw">
         <h1><a href="/">logo</a></h1>
         <nav>
-          <a href="/write">글쓰기</a>
-          <a href="/login">로그인</a>
-          <a href="/signup">회원가입</a>
-          <!-- <p><span>설예지</span>님 환영합니다.</p>
-          <a href="logout">로그아웃</a> -->
+          <% if(user){ %>
+            <p><a href="/mypage"><%= user.userName %></a>님 환영합니다.</p>
+            <a href="/write">글쓰기</a>
+            <a href="/logout">로그아웃</a>
+          <% } else { %>
+            <a href="/login">로그인</a>
+            <a href="/signup">회원가입</a>
+          <% } %>
         </nav>
         <div class="darkmode">
           <i class="fa-regular fa-sun"></i>
